--- a/twig/playlist.html
+++ b/twig/playlist.html
@@ -66,7 +66,7 @@
 
 
         <hr>
-        <div class="col"><span> {{ video.rank }}</span></div>
+        <div class="col"><span style="color: #aaaaaa;"> {{ video.id }} Rank: {{ video.rank + 1 }} </span></div>
         <div class="row">
             <div class="col-md-3">
                 <a href="/video?id={{ video['id'] }}">
