--- a/twig/home.html
+++ b/twig/home.html
@@ -102,7 +102,6 @@
         <h1 class="display-4">New Videos</h1>
     </div>
 
-    <!-- Example row of columns -->
     <div class="row my-md-1">
         {% if newVideos is empty %}
         <div class="col-md-4">
@@ -113,6 +112,29 @@
         <div class="col-md-4">
             <h2 class="lead text-limit">{{ video['name'] }}</h2>
             <a href="/video?id={{ video['id'] }}">
+                {% include "_thumbnail.html" with { thumbnail: video['thumbnail'] } %}
+            </a>
+        </div>
+        {% endfor %}
+        {% endif %}
+    </div>
+
+    <hr>
+
+    <div class="col-12 ml-lg-0">
+        <h1 class="display-4">Playlists</h1>
+    </div>
+
+    <div class="row my-md-1">
+        {% if newPlaylists is empty %}
+        <div class="col-md-4">
+            <h2 class="other-title">No playlists available.</h2>
+        </div>
+        {% else %}
+        {% for video in newPlaylists %}
+        <div class="col-md-4">
+            <h2 class="lead text-limit">{{ video['name'] }}</h2>
+            <a href="/playlist?id={{ video['id'] }}">
                 {% include "_thumbnail.html" with { thumbnail: video['thumbnail'] } %}
             </a>
         </div>
