--- a/twig/home.html
+++ b/twig/home.html
@@ -65,7 +65,9 @@
             <div class="col-md-2">
                 <h2 class="lead text-limit">{{ video['name'] }}</h2>
                 <a href="/video?id={{ video['id'] }}">
-                    {% include "_thumbnail.html" with { thumbnail: video['thumbnail'] } %}
+
+{% include "_thumbnail.html" with { thumbnail: video['thumbnail'] } %}
+
                 </a>
             </div>
             {% endfor %}
@@ -84,7 +86,9 @@
             <div class="col-md-3">
                 <h2 class="lead text-limit">{{ playlist['title'] }}</h2>
                 <a href="/playlist?id={{ playlist['id'] }}">
-                    {% include "_thumbnail.html" with { thumbnail: playlist['thumbnail'] } %}
+
+{% include "_thumbnail.html" with { thumbnail: playlist['thumbnail'] } %}
+
                 </a>
             </div>
             {% endfor %}
@@ -112,7 +116,9 @@
         <div class="col-md-4">
             <h2 class="lead text-limit">{{ video['name'] }}</h2>
             <a href="/video?id={{ video['id'] }}">
-                {% include "_thumbnail.html" with { thumbnail: video['thumbnail'] } %}
+
+{% include "_thumbnail.html" with { thumbnail: video['thumbnail'] } %}
+
             </a>
         </div>
         {% endfor %}
@@ -131,12 +137,14 @@
             <h2 class="other-title">No playlists available.</h2>
         </div>
         {% else %}
-        {% for video in newPlaylists %}
+        {% for playlist in newPlaylists %}
         <div class="col-md-4">
-            <h2 class="lead text-limit">{{ video['name'] }}</h2>
-            <a href="/playlist?id={{ video['id'] }}">
-                {% include "_thumbnail.html" with { thumbnail: video['thumbnail'] } %}
+            <h2 class="lead text-limit">{{ playlist['name'] }}</h2>
+            <a href="/playlist?id={{ playlist['id'] }}">
+
+{% include "_thumbnail.html" with { thumbnail: playlist['thumbnail'] } %}
             </a>
+
         </div>
         {% endfor %}
         {% endif %}
