changed text from 'remember me' to 'remember email'

--- a/twig/login.html
+++ b/twig/login.html
@@ -23,7 +23,7 @@
                 <input type="password" name="password" id="inputPassword" class="form-control" placeholder="Password" required autofocus="" >
                 <div class="checkbox">
                   <label class="text-white">
-                    <input type="checkbox" name="rememberMe" value="yes" checked /> Remember me
+                    <input type="checkbox" name="rememberMe" value="yes" checked /> Remember email
                   </label>
                 </div>
                 {% else %}
@@ -31,7 +31,7 @@
                 <input type="password" name="password" id="inputPassword" class="form-control" placeholder="Password" required >
                 <div class="checkbox">
                   <label class="text-white">
-                    <input type="checkbox" name="rememberMe" value="yes"/> Remember me
+                    <input type="checkbox" name="rememberMe" value="yes"/> Remember email
                   </label>
                 </div>
                 {% endif %}
