removed 'Other Videos' section from video page, not needed

--- a/twig/video.html
+++ b/twig/video.html
@@ -167,11 +167,11 @@
 
 
         </div>
+        <!--
         <div class="col-md-3 col-xs-12">
             <div class="col-12 ml-lg-0">
                 <h2 class="other-title">Other videos</h2>
             </div>
-            <!-- Example row of columns -->
             <div class="row my-md-1">
                 <div class="col-md-12">
                     <h2 class="lead text-limit">1234567890123456789012345678901234567890</h2>
@@ -186,7 +186,7 @@
                     <a href="/video"><img src="/thumbnail/test.jpg" class="img-thumbnail border-success"></a>
                 </div>
             </div>
-        </div>
+        </div> -->
     </div>
 
 </div> <!-- /container -->
