fixed uploading thumbnail when updating playlist :)

--- a/twig/playlist.html
+++ b/twig/playlist.html
@@ -44,8 +44,8 @@
                 <input type="hidden" name="playlist-id" value="{{ playlist.id }}"/>
 
                 {% if createMode or editMode %}
-                <label for="fileuploader"><h4 class="other-title">Upload <span class="text-success">Thumbnail</span></h4></label>
-                <div class="custom-file" id="fileuploader">
+                <label for="fileUploader"><h4 class="other-title">Upload <span class="text-success">Thumbnail</span></h4></label>
+                <div class="custom-file" id="fileUploader">
                     <input type="file" class="custom-file-input" id="customFileThumbnail" name="file-thumbnail" accept="image/*">
                     <label class="custom-file-label" for="customFileThumbnail">
                         <span class="file-custom" data-content-value="Choose Thumbnail..."></span>
